Revert "XWIKI-20520: Mail messages can be dropped without errors in the UI if the prepare thread is full"
This reverts commit a166467e7d74e931cbf64b16fbacccc77d1281ce.